fix: .webex-button-list now wraps if wider than 100 percent. Not the most pretty solution but working.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/exams@2740 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/exams2forms/inst/webex/webex.css
+++ b/pkg/exams2forms/inst/webex/webex.css
@@ -128,6 +128,7 @@
 /* webex button list styling */
 ul.webex-button-list {
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
     list-style: none;
     padding: 0 !important; /* !important for bookdown::gitbook: */
@@ -156,6 +157,7 @@ ul.webex-button-list > li:first-child {
     color: var(--highlight);
     padding: 0 0.5em;
     font-size: 1.2em;
+    white-space: nowrap;
 }
 .webex-button:hover {
     background-color: var(--highlight_alpha);
